--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Vyrobnykplyus</title>
-<script defer src="polyfill.8cfdaf18087025c8bc55.js"></script><script defer src="app.8cfdaf18087025c8bc55.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.67fce969123e0594b873.js"></script><script defer src="app.67fce969123e0594b873.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -299,23 +299,26 @@
             </div>
             <div class="foot__box">
               <h4 class="hed lang__footer" key="sales__department">SALES DEPARTMENT: </h4>
-              <p>Tel.: +38 (067) 928 14 42 Ukraine</p>
-              <p>Tel.: +38 (067) 631 11 56 Krivoy Rog</p>
-              <p>Tel.: +38 (096) 045 30 43 Export</p>
+              <p class="lang__footer" key="footer__number1">Tel.: +38 (067) 928 14 42 Ukraine</p>
+              <p class="lang__footer" key="footer__number2">Tel.: +38 (067) 631 11 56 Krivoy Rog</p>
+              <p class="lang__footer" key="footer__number3">Tel.: +38 (096) 045 30 43 Export</p>
               <p>E-mail: vurobnykplus@gmail.com</p>
             </div>
             <div class="contacks">
               <h4 class="lang__footer" key="quality__remarks">QUALITY REMARKS:</h4>
                 <p>Tel.: +38 (097)963 35 68</p>
                 <p>E-mail: vurobnyk-zavlab@ukr.net</p>
-                <div class="social">
-                  <a href="https://www.instagram.com/vyrobnykplyus/">
-                    <img src="0ca69b2ab53341fe8327.png" alt="">
-                  </a>
-                  <a href="https://www.facebook.com/SoyuzKonditer/?ref=pages_you_manage">
-                    <img src="32fcbe0ff4996ac943ee.png" alt="">
-                  </a>
-              </div>
+            </div>
+            <div class="social__networks">
+              <h4 class="lang__footer" key="social__networks">SOCIAL NETWORKS:</h4>
+              <div class="social">
+                <a href="https://www.instagram.com/vyrobnykplyus/">
+                  <img src="0ca69b2ab53341fe8327.png" alt="">
+                </a>
+                <a href="https://www.facebook.com/SoyuzKonditer/?ref=pages_you_manage">
+                  <img src="32fcbe0ff4996ac943ee.png" alt="">
+                </a>
+            </div>
             </div>
           </div>
         </div>
