--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Vyrobnykplyus</title>
-<script defer src="polyfill.67fce969123e0594b873.js"></script><script defer src="app.67fce969123e0594b873.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.1ddf0d3435ac8b2fc062.js"></script><script defer src="app.1ddf0d3435ac8b2fc062.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -46,10 +46,10 @@
                   <i class="tiny material-icons">search</i>
                 </li>
                 <li class="header__icon language en">
-                  <button id="en" class="translate"><img src="48edff59f704c974afbf.jpg" alt=""></button>
+                  <button id="en" class="translate"><img class="img" src="4d9d990626a3df96a265.png" alt=""></button>
                 </li>
                 <li class="header__icon language uk">
-                  <button id="uk" class="translate"><img src="223552343cc5054e4f46.png" alt=""></button>
+                  <button id="uk" class="translate"><img class="img" src="d438fcfead828ce0e701.png" alt=""></button>
                 </li>
                 <li class="header__icon basket">
                   <i class="material-icons inProcess">shopping_basket</i>
@@ -313,10 +313,10 @@
               <h4 class="lang__footer" key="social__networks">SOCIAL NETWORKS:</h4>
               <div class="social">
                 <a href="https://www.instagram.com/vyrobnykplyus/">
-                  <img src="0ca69b2ab53341fe8327.png" alt="">
+                  <img src="cec5736859c50a5a0dc7.png" alt="">
                 </a>
                 <a href="https://www.facebook.com/SoyuzKonditer/?ref=pages_you_manage">
-                  <img src="32fcbe0ff4996ac943ee.png" alt="">
+                  <img src="9a6e212e214e7aef33e5.png" alt="">
                 </a>
             </div>
             </div>
