--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Vyrobnykplyus</title>
-<script defer src="polyfill.1ddf0d3435ac8b2fc062.js"></script><script defer src="app.1ddf0d3435ac8b2fc062.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.a8d1a53b4af9399eca12.js"></script><script defer src="app.a8d1a53b4af9399eca12.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -264,22 +264,21 @@
     </div>
     <div class="pa__8">
       <div class="container1">
-        <div class="swiper__news">
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <div class="card">
-                <div class="card-image">
-                  <img src="05aade83779b42d7b7ff.jpg">
-                  <span class="card-title lang__card" key="nameCard4">name 4</span>
-                </div>
-                <div class="card-content">
-                  <p class="lang__card" key="descrCard4">description 4</p>
-                </div>
-              </div>
+        <div class="news__container">
+          <div class="card__news">
+            <div class="card__news__content">
+              <h3 class="card__news__title lang__card" key="nameCard4">OPENING A NEW WAREHOUSE</h3>
+              <p class="card__news__description lang__card" key="descrCard4">Friends! We want to share with you another joyful event in the life of our Company...</p>
+              <a href="./news.html" class="btn lang__card" key="read__more">read more</a>
             </div>
           </div>
-          <div class="swiper-pagination"></div>
+          <div class="card__news">
+            <div class="card__news__content">
+              <h3 class="card__news__title lang__card" key="nameCard5">some title 1</h3>
+              <p class="card__news__description lang__card" key="descrCard5">some desc 1</p>
+              <a href="./news.html" class="btn lang__card" key="read__more">read more</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
