--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>news</title>
-<script defer src="polyfill.1ddf0d3435ac8b2fc062.js"></script><script defer src="app.1ddf0d3435ac8b2fc062.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.a8d1a53b4af9399eca12.js"></script><script defer src="app.a8d1a53b4af9399eca12.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -71,17 +71,28 @@
       </ul>
     </div>
   </div>
-  <div class="pa__header">
-    <h1 class="lang" key="open__new__warehouse">opening a new warehouse</h1>
-  </div>
   <div class="news__section">
     <div class="container1">
       <div class="news__flex__container">
+        <div class="pa__header">
+          <h1 class="lang" key="open__new__warehouse">opening a new warehouse</h1>
+        </div>
         <div class="card__news">
           <div class="news__img">
             <img src="e48c2ed5d41c78f8baeb.jpg" alt="">
           </div>
           <div class="news__desc lang__about__page" key="news1">Friends! We want to share with you another joyful event in the life of our Company. Our warehouse in Kryvyi Rih has moved to a new address, now we are on the street. S. Tilgi 34c. Such changes have a positive impact on the work of our team and inspire the use of new opportunities.
+          </div>
+        </div>
+        <div class="pa__header">
+          <h1>some header</h1>
+        </div>
+        <div class="card__news">
+          <div class="news__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium atque quia mollitia eos enim ducimus cumque voluptatibus vel dignissimos hic quisquam inventore fugit blanditiis veniam, est maiores pariatur facere? Ea?
+          </div>
+          <div class="news__img">
+            <img src="29680dce994505c42f17.jpg" alt="">
           </div>
         </div>
       </div>
