--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>History</title>
-<script defer src="polyfill.a8d1a53b4af9399eca12.js"></script><script defer src="app.a8d1a53b4af9399eca12.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.bb2f37fd59002ca97e1f.js"></script><script defer src="app.bb2f37fd59002ca97e1f.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -26,10 +26,7 @@
       </nav>
       <div class="header__brands">
         <a href="./index.html">
-          <img src="43effa9e2060cfa9aea1.png" alt="brand">
-        </a>
-        <a href="./index.html">
-          <img class="second" src="fffd6888ee5df192bb9f.png" alt="">
+          <img src="01cc1277bbf55f761e38.png" alt="brand">
         </a>
       </div>
       <nav class="header__icons">
@@ -68,28 +65,28 @@
   <div class="pa__history">
     <div class="container2 flex">
       <p class="lang__history__page" key="history__page__pa__1">
-        Production of confectionery products <br>
+        <span> Production of confectionery products </span><br>
           VYROBNYK PLYUS LTD is the one of the leaders in production of oatmeal, cornmeal cookies, bagels and rusks throughout Ukraine over the past 15 years. We make our products with zeal and soul, believing that even the best product can be made much better! We do what we love, and boldly share our success with the whole world.
       </p>
       <p class="lang__history__page" key="history__page__pa__2">
         Our company has a well-developed distribution network throughout Ukraine. The sales structure sells products under its own trademarks “SOYUZ KONDITER” and “TASMAN” in the amount of more than 400 tons per month.
       </p>
-      <p class="lang__history__page" key="history__page__pa__3">Benefits <br>
+      <p class="lang__history__page" key="history__page__pa__3"><span> Benefits </span><br>
         The most important thing for us is concern for the welfare of our customers, the safety and quality of our confectionery products. Using only high-quality, environmentally friendly raw materials, we produce products of the highest quality.
         </p>
         <p class="lang__history__page" key="history__page__pa__4">
-          Product quality <br>
+          <span>Product quality </span><br>
             High quality products are provided by new technologies and modern equipment, high-quality ingredients and quality control, which cover the entire production – from raw materials to the time of delivery of the product to the customer. <br>
             Confirmation of this is the certificate for the food safety management system in accordance with DSTU ISO 22000, which was received by the enterprise.
             This system covers the food chain from production to consumption of the food product of the final consumer.
         </p>
         <p class="lang__history__page" key="history__page__pa__5">
-          Export <br>
+          <span>Export</span> <br>
             In addition to the Ukrainian market, our products are presented in markets on other countries of the world. The company is actively developing its export potential, mainly in the countries of the European Union, North America, and Central Asia. The products of our brands are represented in Germany, Greece, Romania, Bulgaria, Hungary, Lithuania, Latvia, Estonia, Georgia, Azerbaijan, Israel, Canada, etc. <br>
             VYROBNYK PLYUS LTD is carried out export shipments of more than 100 tons of confectionery products in the month.
         </p>
         <p class="last lang__history__page" key="history__page__pa__6">
-          Cooperation <br>
+          <span>Cooperation</span> <br>
            In working with our customers, the company is always guided by the interests of our partners and is able to find compromises. <br>
            We are sure that in our person you will find a reliable and professional partner. <br>
            Regularity in the supply of products and a flexible system of discounts, flawless fulfillment of orders, individual work with customers will allows us to build a long-term relationships.
