--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Vyrobnykplyus</title>
-<script defer src="polyfill.a8d1a53b4af9399eca12.js"></script><script defer src="app.a8d1a53b4af9399eca12.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.bb2f37fd59002ca97e1f.js"></script><script defer src="app.bb2f37fd59002ca97e1f.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -55,7 +55,7 @@
                   <i class="material-icons inProcess">shopping_basket</i>
                 </li>
                 <li class="header__icon account">
-                  <i class="material-icons inProcess">account_circle</i>
+                  <a href="#"><i class="material-icons">account_circle</i></a>
                 </li>
                 <li class="header__icon burger">
                   <div class="header__burger">
@@ -282,6 +282,7 @@
         </div>
       </div>
     </div>
+
     <footer class="footer__section">
       <div class="foot__bg">
         <div class="container1">
