--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>about</title>
-<script defer src="polyfill.a8d1a53b4af9399eca12.js"></script><script defer src="app.a8d1a53b4af9399eca12.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.bb2f37fd59002ca97e1f.js"></script><script defer src="app.bb2f37fd59002ca97e1f.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -26,10 +26,7 @@
       </nav>
       <div class="header__brands">
         <a href="./index.html">
-          <img src="43effa9e2060cfa9aea1.png" alt="brand">
-        </a>
-        <a href="./index.html">
-          <img class="second" src="fffd6888ee5df192bb9f.png" alt="">
+          <img src="01cc1277bbf55f761e38.png" alt="brand">
         </a>
       </div>
       <nav class="header__icons">
@@ -69,8 +66,21 @@
     <div class="container2 flex">
         <p class="lang__about__page" key="about__page__pa__1">Marketplace “KRYVYI RIH” sells the products as under its own brand SOYUZ KONDITER.</p>
         <p class="lang__about__page" key="about__page__pa__2">The sales system is managed by its own team which consists with 1 head of sales department, 1 supervisor and 8 sales representatives, of which 3 sales representatives work in the city using the pre-selling system, covering about 400 outlets and 5 sales representatives working outside the city according to the Van selling system, covering more than 700 retail outlets in cities such as Zhovti Vody, Piatykhatky, Nikopol, Novovorontsovka, Vilnohirsk, Sofiivka, Ingulets, Dolynska, Kazanka.</p>
+        <div class="container1">
+          <div class="img__container">
+            <img src="2ce5b74ef5c569428af3.jpg" alt="">
+            <img src="fbbb99258eaa3d461703.jpg" alt="">
+            <img src="85684b4f1882c8ba617a.jpg" alt="">
+          </div>
+        </div>
         <p class="lang__about__page" key="about__page__pa__3">The resources of our company allow for the uninterrupted and timely delivery of products using our own transport in the city and beyond.</p>
         <p class="last lang__about__page" key="about__page__pa__4">All finished products are stored in a warehouse with a total area of 280 m3, the condition of which corresponds to sanitary and hygienic requirements, in compliance with the temperature regime.</p>
+        <div class="container1">
+          <div class="img__container">
+            <img src="4db9211a317c1bd8484f.jpg" alt="">
+            <img src="36c87025d92d12782374.jpg" alt="">
+          </div>
+        </div>
         <a href="./index.html" class="btn btn__home lang__about__page" key="home">home</a>
     </div>
   </div>
