--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Vyrobnykplyus</title>
-<script defer src="polyfill.bb2f37fd59002ca97e1f.js"></script><script defer src="app.bb2f37fd59002ca97e1f.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.9f5fc97205dd8cd6403a.js"></script><script defer src="app.9f5fc97205dd8cd6403a.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -54,8 +54,8 @@
                 <li class="header__icon basket">
                   <i class="material-icons inProcess">shopping_basket</i>
                 </li>
-                <li class="header__icon account">
-                  <a href="#"><i class="material-icons">account_circle</i></a>
+                <li class="header__icon account inProcess">
+                  <a href="#"><i class="material-icons ">account_circle</i></a>
                 </li>
                 <li class="header__icon burger">
                   <div class="header__burger">
