--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Vyrobnykplyus</title>
-<script defer src="polyfill.9f5fc97205dd8cd6403a.js"></script><script defer src="app.9f5fc97205dd8cd6403a.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.8e274a76c3b4f4daa505.js"></script><script defer src="app.8e274a76c3b4f4daa505.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -66,10 +66,10 @@
             </nav>
         </div>
     </div>
-    <div class="pa__header">
+    <div class="pa__header" id="pa__2" >
       <h1 key="about" class="lang">about us</h1>
     </div>
-    <div class="pa__2 section scrollspy" id="pa__2" >
+    <div class="pa__2 section scrollspy">
       <div class="bg__red">
         <div class="container1">
           <div class="about__us">
@@ -94,36 +94,24 @@
             <div class="swiper-wrapper con">
               <!-- Slides -->
               <div class="swiper-slide">
-                <div class="card">
-                  <div class="card-image ">
-                    <img src="a3e8d07054feae575ac3.jpg">
-                    <span class="card-title lang__card" key="nameCard1">Name</span>
-                  </div>
-                  <div class="card-content">
-                    <p class="lang__card" key="descrCard1">description 1</p>
-                  </div>
+                <div class="swiper-slide-el">
+                  <img class="swiper-slide-el-img" src="144bc5d81f7d3b9019b6.jpg" alt="">
+                  <span class="swiper-slide-el-title">New Product 1</span>
+                  <span class="swiper-slide-el-description">New Product desc</span>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="card">
-                  <div class="card-image">
-                    <img src="144bc5d81f7d3b9019b6.jpg">
-                    <span class="card-title lang__card" key="nameCard2">Name</span>
-                  </div>
-                  <div class="card-content">
-                    <p class="lang__card" key="descrCard2">description 2</p>
-                  </div>
+                <div class="swiper-slide-el">
+                  <img class="swiper-slide-el-img" src="a3e8d07054feae575ac3.jpg" alt="">
+                  <span class="swiper-slide-el-title">New Product 2</span>
+                  <span class="swiper-slide-el-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto earum reprehenderit atque, eos ut nisi nobis, excepturi asperiores aliquam repellat beatae facilis eius delectus voluptatum facere omnis ipsum ad. Possimus!</span>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="card">
-                  <div class="card-image">
-                    <img src="10ad897e97064cf77930.jpg">
-                    <span class="card-title lang__card" key="nameCard3">Name</span>
-                  </div>
-                  <div class="card-content">
-                    <p class="lang__card" key="descrCard3">description 3</p>
-                  </div>
+                <div class="swiper-slide-el">
+                  <img class="swiper-slide-el-img" src="10ad897e97064cf77930.jpg" alt="">
+                  <span class="swiper-slide-el-title">New Product 3</span>
+                  <span class="swiper-slide-el-description">New Product desc</span>
                 </div>
               </div>
             </div>
